--- a/style.css
+++ b/style.css
@@ -1,7 +1,52 @@
 #logo_anses_png{
-    height: 5vh;
+    height: 6vh;
+    margin-left: 50px !important;
 }
 
 #header{
-    height: 15vh;
+    height: 16.5vh;
+    background-color: #37BBED !important;
+    justify-content: space-between;
+}
+
+
+
+#navbar_ul a{
+    color: white !important;
+    font-weight: 400 !important;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+   
+    text-align: center  !important;
+    align-items: center;
+    font-size: 1em !important;
+    
+}
+
+
+    
+
+
+#navbar_ul{
+    background-color: #50535C !important; 
+    text-align: center  !important;
+    align-items: center;
+    height: 8.5vh;
+    gap: 20px;
+    font-weight: 400 !important;
+    
+}
+
+#busca_en_anses{
+    height: 7vh;
+    width: 20vw;
+}
+
+#header_search_form{
+    margin-left: 550px !important;
+}
+
+
+#img_mianses{
+    margin-right: 100px !important;
 }
