--- a/style.css
+++ b/style.css
@@ -17,10 +17,8 @@
 
 #navbar_ul a{
     color: white !important;
-    font-weight: 400 !important;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-   
+    font-weight: bold !important;
+    font-family: "encodesans-bold";  
     text-align: center  !important;
     align-items: center;
     font-size: 1em !important;
@@ -38,7 +36,7 @@
     height: 8.5vh;
     gap: 20px;
     font-weight: 400 !important;
-    
+    width: 100% !important;
 }
 
 
@@ -51,7 +49,9 @@
     height: 100%;
     align-items: center !important; 
     background-color: #37BBED !important;
+    
 }
 #header_row div{
     align-items: center !important;
 }
+
