--- a/style.css
+++ b/style.css
@@ -89,3 +89,103 @@
         flex-basis: calc(33% - 40px);
     }
 }
+
+
+
+
+/* FOOTER  */
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f3faff;
+    position: relative;
+    padding: 0;
+  
+  }
+  
+  .footer-bar{
+    display: flex;
+    background: #f3faff;
+    color: #e1e1e1;
+    text-align: center;
+    padding: 16px 0;
+  
+  }
+  
+  .col-sm-12{
+    position: relative;
+    min-height: 1px;
+    padding-left: 13px;
+    padding-right: 13px;
+  }
+  .container{
+    padding: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  footer .footer-bar .col-sm-4.links{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    width: auto;
+    margin: 0px 20px 25px 0;
+  }
+  
+  /* .footer-down{
+    background: #37BBED;
+    width: 100%;
+    float: left;
+    padding: 50px 0;
+    color: #FFF;
+    font-family: 'encodesans-semibold';
+    height: 335px;
+  
+  }
+ 
+  .footer-down .col-sm-4.logo-footer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .footer-down .col-sm-4 {
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+  }
+  .footer-down .col-sm-4.logo-argentina {
+    display: flex;
+    justify-content: center;
+    margin: 17px 0;
+  } */
+
+
+  #footer_down{
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    background-color: #37BBED !important;
+  }
+
+  #footer_down div{
+    margin-right: 6em;
+    margin-left: 6em;
+  }
+
+  #logo_anses_footer{
+    height: 6vh;
+  }
+
+  #logo_argentina_presidencia{
+    height: 9vh;
+  }
+
+  #footer_text{
+    font-size: 1.5em;
+    color: white;
+    font-weight: bold;
+  }
