--- a/style.css
+++ b/style.css
@@ -72,4 +72,150 @@
     .card-container > * {
         flex-basis: calc(33% - 40px);
     }
+
+
+
+
+
+
+
+    element.style {
+    }
+    .block.block-views.block-views-blocklo-mas-consultado-block-1 {
+        width: 100%;
+        float: left;
+    }
+    .block.block-views.block-views-blocklo-mas-consultado-block-1 {
+        width: 100%;
+        float: left;
+    }
+    article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+        display: block;
+    }
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    hoja de estilo del usuario-agente
+    section {
+        display: block;
+    }
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+        /* font-family: 'encodesans-regular'; */
+    }
+    body {
+        font-family: "roboto-regular", Helvetica, Arial, sans-serif;
+        font-size: 16px;
+        line-height: 1.42857;
+        color: #0C1E2B;
+        background-color: #fff;
+    }
+    html {
+        font-size: 10px;
+        -webkit-tap-highlight-color: transparent;
+    }
+    html {
+        font-family: sans-serif;
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+    }
+    .clearfix:before, .filter-wrapper:before, .clearfix:after, .filter-wrapper:after {
+        content: " ";
+        display: table;
+    }
+    *:before, *:after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .clearfix:after, .filter-wrapper:after {
+        clear: both;
+    }
+    .clearfix:before, .filter-wrapper:before, .clearfix:after, .filter-wrapper:after {
+        content: " ";
+        display: table;
+    }
+    .clearfix:after {
+        display: table;
+        clear: both;
+        content: "";
+    }
+    *:before, *:after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+
+    element.style {
+    }
+    .block.block-views.block-views-blocklo-mas-consultado-block-1 .item-inner > a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: red;
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+        opacity: 0;
+    }
+    a {
+        color: #1786E2;
+    }
+    a {
+        color: #0C1E2B;
+        text-decoration: none;
+    }
+    a {
+        background-color: transparent;
+    }
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    hoja de estilo del usuario-agente
+    a:-webkit-any-link {
+        color: -webkit-link;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+        /* font-family: 'encodesans-regular'; */
+    }
+    body {
+        font-family: "roboto-regular", Helvetica, Arial, sans-serif;
+        font-size: 16px;
+        line-height: 1.42857;
+        color: #0C1E2B;
+        background-color: #fff;
+    }
+    html {
+        font-size: 10px;
+        -webkit-tap-highlight-color: transparent;
+    }
+    html {
+        font-family: sans-serif;
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+    }
+    *:before, *:after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    *:before, *:after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+
+
+
+
+
 }
